# rullst-orm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NEW_AUDIT.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_PERFORMANCE_AUDIT.md  benchmarks.html  deny.toml  docs.html  fuzz_local.rs  index.html  jules_a.md  pin.ps1  repro.rs  runs.json  security_audit.md
.github/: SECURITY.md
.github/workflows/: auto-audit.yml  bench.yml  cargo-deny.yml  cargo-machete.yml  ci.yml  codeql.yml  deploy-docs.yml  deploy-website.yml  fuzz.yml  kani.yml  miri.yml  mutants.yml  panic-policy.yml  proptest.yml  scorecard.yml  semver.yml  unsafe-policy.yml
assets/: benchmarks-75wuwwfu.js  docs-AQxlaZe3.js  docs-BLYJGLRU.js  docs-DD1g68ET.js  index-BafkQfwX.css  index-C4zWNNCo.css  index-ChZDMRKW.css  index-DkmmUGnY.js  main-VkRAGwI5.js
bench/: data.js
dev/bench/: data.js
docs/: 1-basics.md  3-advanced-features.md  5-security-and-testing.md  6-new-features.md  PR_DESCRIPTION.md  audit_report_complete.md
fuzz/: Cargo.toml  osv-scanner.toml
fuzz/fuzz_targets/: fuzz_audit.rs  fuzz_builder.rs  fuzz_parser.rs  fuzz_schema.rs  fuzz_scout.rs  repro_oom.rs
rullst-orm/: Cargo.toml
rullst-orm-macros/: Cargo.toml
rullst-orm-macros/src/: builder.rs  enums.rs  factory_observer.rs  lib.rs  models.rs  parser.rs  parser_tests.rs  privacy.rs  relationships.rs
rullst-orm-macros/tests/: fuzz_repro.rs  macro_tests.rs
rullst-orm/benches/: orm_bench.rs
rullst-orm/examples/: admin_panel.rs  advanced_joins_and_subqueries.rs  api_resources.rs  artisan_demo.rs  audit_trail.rs  basic.rs  bench.rs  collections.rs  compile_time_safety.rs  constrained_eager_loading.rs  custom_soft_delete.rs  enterprise_scaling.rs  factories_and_seeders.rs  field_hiding.rs  hooks.rs  json_casting.rs  many_to_many.rs  migrations.rs  observers.rs  polymorphic_relationships.rs  query_logging.rs  redis_cache_and_events.rs  relationships.rs  saas_multi_tenancy.rs  scopes.rs  scout_search.rs  skip_tenant.rs  transactions.rs
rullst-orm/src/: admin.rs  audit.rs  collection.rs  dashboard.html  database.rs  error.rs  lib.rs  migration_template.rs.txt  policy.rs  privacy.rs  raw.rs  resource.rs  schema.rs  scout.rs  scratch.rs  tenant.rs  types.rs
rullst-orm/tests/: integration_extra.rs  integration_tests.rs  lazy_load_test.rs  macro_mutants_test.rs  matrix_mysql.rs  matrix_postgres.rs  partial_update_test.rs  policy_test.rs  privacy_macro_test.rs  proptest_builder.rs  raw_test.rs  sandbox_test.rs  stream_test.rs  stress_concurrency.rs
rust-eloquent/: Cargo.toml
rust-eloquent-macros/: Cargo.toml
rust-eloquent-macros/src/: builder.rs  lib.rs  models.rs
rust-eloquent/examples/: basic.rs  enterprise_scaling.rs  redis_cache_and_events.rs
rust-eloquent/src/: lib.rs  schema.rs
website/: benchmarks.html  benchmarks.js  docs.html  docs.js  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
website/public/docs/: 3-advanced-features.md  5-security-and-testing.md  PR_DESCRIPTION.md
