[package]
name = "rullst-orm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies.rullst-orm]
path = "../rullst-orm"

[dependencies]
libfuzzer-sys = "0.4"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
sqlx = { version = "0.9", features = ["sqlite", "postgres", "mysql", "any", "runtime-tokio", "macros", "json"] }
tokio = { version = "1.23.1", features = ["full"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("redis"))', 'cfg(kani)'] }

[[bin]]
name = "fuzz_audit"
path = "fuzz_targets/fuzz_audit.rs"
test = false
doc = false

[[bin]]
name = "fuzz_schema"
path = "fuzz_targets/fuzz_schema.rs"
test = false
doc = false

[[bin]]
name = "fuzz_scout"
path = "fuzz_targets/fuzz_scout.rs"
test = false
doc = false

[[bin]]
name = "fuzz_builder"
path = "fuzz_targets/fuzz_builder.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
